/*
  Copyright (c) 2008, 2013, Oracle and/or its affiliates. All rights reserved.

  The MySQL Connector/C++ is licensed under the terms of the GPLv2
  <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
  MySQL Connectors. There are special exceptions to the terms and
  conditions of the GPLv2 as it is applied to this software, see the
  FLOSS License Exception
  <http://www.mysql.com/about/legal/licensing/foss-exception.html>.

  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published
  by the Free Software Foundation; version 2 of the License.

  This program is distributed in the hope that it will be useful, but
  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
  for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
*/

GA  1.1.4 - 
- Both static and dynamic driver libraries are now linked statically against
  libmysql library
- Cannot Connect error when using legacy authentication. (Bug#16970753/69492)
- Connector/C++ doesn't implement MYSQL_OPT_SSL_VERIFY_SERVER_CERT,
  MYSQL_OPT_SSL_CRL, MYSQL_OPT_SSL_CRLPATH. Introduced connection options
  "sslVerify"(boolean), "sslCRL" and "sslCRLPath"(string). (Bug#18461451)

- Built against libmysql 5.6.

GA  1.1.3 - 2013-03-22
- Added boolean connection option OPT_ENABLE_CLEARTEXT_PLUGIN allowing to
  enable cleartext libmysql plugin. That plugin is required for some
  authentication methods, e.g. PAM. (Bug#16520952)
- getBestRowIdentifier() now considers unique not nullable indexes in case
  when primary key does not exist. (Bug#16277170)
- False value of the metadataUseInfoSchema connection option had no effect
  in database metadata object.
