@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2008, 2013, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2008, 2014, Oracle and/or its affiliates. All rights reserved.
 #
 # The MySQL Connector/C++ is licensed under the terms of the GPLv2
 # <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most
@@ -25,10 +25,6 @@
 
 PROJECT(MYSQLCPPCONN)
 
-# Bump this every time we change the API/ABI
-SET(MYSQLCPPCONN_SOVERSION "7")
-
-
 IF(WIN32)
 # We need this for mysqlcppconn_EXPORTS needed for the static build
 	cmake_minimum_required(VERSION 2.6.2)
@@ -39,6 +35,28 @@ ENDIF(WIN32)
 if(COMMAND cmake_policy AND POLICY CMP0015)
 	cmake_policy(SET CMP0015 NEW)
 endif(COMMAND cmake_policy AND POLICY CMP0015)
+
+
+INCLUDE(VersionInfo.cmake)
+
+SET(EDIT_WARNING_MESSAGE "Please do not edit this file - it is generated by cmake. Edit its source file instead.")
+
+# Configuring header file with driver version info
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/driver/version_info.h.cmake ${CMAKE_SOURCE_DIR}/driver/version_info.h @ONLY)
+
+# This is needed by windows installer and fro CPACK
+IF(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
+	SET(LICENSE_FILENAME "${CMAKE_SOURCE_DIR}/COPYING")
+ELSE(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
+	SET(LICENSE_FILENAME "${CMAKE_SOURCE_DIR}/LICENSE.mysql")
+ENDIF(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
+
+# Creating file with version info that will be used for installer
+# We have to do this trick because of license filename that is looked in this CMAKE_SOURCE_DIR (installer's cmake is run separately) 
+IF(WIN32)
+	FILE(WRITE "${CMAKE_SOURCE_DIR}/win/config.cmake" "SET(CONNECTOR_PRODUCT_VERSION ${CONNECTOR_VERSION})
+SET( LICENSE_FILENAME "${LICENSE_FILENAME}")")
+ENDIF(WIN32)
 
 #-----------------
 # CPPFLAGS, CXXFLAGS and LDFLAGS from the environment
@@ -188,6 +206,7 @@ IF(NOT CONNECTOR_PLATFORM)
   ENDIF(WIN32)
 ENDIF(NOT CONNECTOR_PLATFORM)
 
+#CPACK version variables are initialized in VersionInfo.cmake
 # Get the part of the package name for this product
 IF(MYSQL_SERVER_SUFFIX STREQUAL "-community")
   SET(CPACK_SERVER_SUFFIX "")
@@ -203,10 +222,6 @@ ENDIF(EXTRA_NAME_SUFFIX)
 
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY
     "Connector/C++, a library for connecting to MySQL servers.")
-SET(CPACK_PACKAGE_VERSION_MAJOR 1)
-SET(CPACK_PACKAGE_VERSION_MINOR 1)
-SET(CPACK_PACKAGE_VERSION_PATCH 4)
-SET(CPACK_PACKAGE_RELEASE_TYPE "")
 SET(CPACK_PACKAGE_VENDOR "Oracle and/or its affiliates")
 SET(CPACK_RPM_PACKAGE_DESCRIPTION
 "The MySQL Connector/C++ is a MySQL database connector for C++. The
@@ -221,22 +236,12 @@ The MySQL software has Dual Licensing, which means you can use the MySQL
 software free of charge under the GNU General Public License
 (http://www.gnu.org/licenses/). You can also purchase commercial MySQL
 licenses from ${CPACK_PACKAGE_VENDOR} if you do not wish to be
-bound by the terms of the GPL. See the chapter "Licensing and Support"
+QLCPPCONN_VERSION
 in the manual for further info.")
 
-IF(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
-  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING")
-ELSE(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
-  SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.mysql")
-ENDIF(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
+SET(CPACK_RESOURCE_FILE_LICENSE "${LICENSE_FILENAME}")
 SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
 SET(CPACK_RESOURCE_FILE_INSTALL "${CMAKE_SOURCE_DIR}/INSTALL")
-SET(MYSQLCPPCONN_NUMERIC_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-IF(EXTRA_VERSION)
-  SET(MYSQLCPPCONN_VERSION "${MYSQLCPPCONN_NUMERIC_VERSION}${EXTRA_VERSION}${CPACK_PACKAGE_RELEASE_TYPE}")
-ELSE(EXTRA_VERSION)
-  SET(MYSQLCPPCONN_VERSION "${MYSQLCPPCONN_NUMERIC_VERSION}${CPACK_PACKAGE_RELEASE_TYPE}")
-ENDIF(EXTRA_VERSION)
 SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${MYSQLCPPCONN_VERSION}")
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}-${MYSQLCPPCONN_VERSION}-${CONNECTOR_PLATFORM}")
 IF(WIN32)
@@ -245,11 +250,6 @@ IF(WIN32)
 ELSE(WIN32)
   SET(CPACK_GENERATOR "TGZ")
   SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY}")
-ENDIF(WIN32)
-
-IF(WIN32)
-  FILE(WRITE "${CMAKE_SOURCE_DIR}/win/config.cmake" "SET(CONNECTOR_PRODUCT_VERSION ${MYSQLCPPCONN_VERSION})
-SET( LICENSE_FILENAME "${CPACK_RESOURCE_FILE_LICENSE}")")
 ENDIF(WIN32)
 
 INSTALL(FILES
@@ -265,7 +265,7 @@ SET(COMMON_IGNORE_FILES "/CMakeFiles/" "/Testing/" "/.bzr/" "_CPack_Packages/"
 	"install_manifest.txt")
 SET(PRJ_COMMON_IGNORE_FILES ${COMMON_IGNORE_FILES} "ANNOUNCEMENT_102_ALPHA" "ANNOUNCEMENT_103_ALPHA" "ANNOUNCEMENT_104_BETA" "ANNOUNCEMENT_105_GA" "ANNOUNCEMENT_110_GA" "ANNOUNCEMENT_111_GA" "ANNOUNCEMENT_DRAFT" )
 
-SET(CPACK_SOURCE_IGNORE_FILES ${PRJ_COMMON_IGNORE_FILES}  "./cppconn/config.h$" "./driver/nativeapi/binding_config.h$")
+SET(CPACK_SOURCE_IGNORE_FILES ${PRJ_COMMON_IGNORE_FILES}  "./cppconn/config.h$" "./driver/nativeapi/binding_config.h$" "./driver/version_info.h$")
 SET(CPACK_PACKAGE_IGNORE_FILES ${PRJ_COMMON_IGNORE_FILES} "something_there" )
 SET(CPACK_SOURCE_GENERATOR "TGZ")
 
